--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@diia-inhouse/types",
+    "name": "@kant2002-diia-inhouse/types",
     "version": "5.1.0",
     "description": "Core types",
     "main": "dist/index.js",
@@ -31,30 +31,31 @@
         "@types/node": "20.10.0",
         "bson": "6.2.0",
         "glob": "10.3.10",
-        "protobufjs": "7.2.5"
+        "protobufjs": "7.2.5",
+        "ts-proto": "^1.169.1"
     },
     "devDependencies": {
-        "@diia-inhouse/configs": "^1.27.1",
-        "@diia-inhouse/eslint-config": "^3.5.0",
-        "@diia-inhouse/genproto": "^1.10.0",
-        "type-fest": "4.8.1",
+        "@kant2002-diia-inhouse/configs": "^1.27.1",
+        "@kant2002-diia-inhouse/eslint-config": "^3.5.0",
+        "@kant2002-diia-inhouse/genproto": "^1.10.0",
+        "lockfile-lint": "4.13.1",
         "rimraf": "5.0.5",
-        "lockfile-lint": "4.13.1"
+        "type-fest": "^4.12.0"
     },
     "resolutions": {
         "@babel/traverse": "7.23.2"
     },
     "release": {
-        "extends": "@diia-inhouse/configs/dist/semantic-release/package",
+        "extends": "@kant2002-diia-inhouse/configs/dist/semantic-release/package",
         "branches": [
             "main"
         ]
     },
     "commitlint": {
-        "extends": "@diia-inhouse/configs/dist/commitlint"
+        "extends": "@kant2002-diia-inhouse/configs/dist/commitlint"
     },
     "eslintConfig": {
-        "extends": "@diia-inhouse/eslint-config",
+        "extends": "@kant2002-diia-inhouse/eslint-config",
         "parserOptions": {
             "project": [
                 "./tsconfig.json",
@@ -62,7 +63,7 @@
             ]
         }
     },
-    "prettier": "@diia-inhouse/eslint-config/prettier",
+    "prettier": "@kant2002-diia-inhouse/eslint-config/prettier",
     "madge": {
         "tsConfig": "./tsconfig.json"
     }
